# prima-undine-opencl

./: Cargo.toml  README.md  build.rs
src/: clblast.rs  lib.rs  ops.rs  test_utils.rs
src/kernels/: add.cl  add_assign.cl  argmax.cl  argmin.cl  argsort.cl  batch_concat.cl  batch_pick.cl  batch_slice.cl  batch_sum.cl  broadcast.cl  common.cl  concat.cl  div.cl  flip.cl  identity.cl  ln.cl  logsumexp.cl  max.cl  min.cl  mul.cl  mul_assign.cl  neg.cl  permute_dims.cl  pick.cl  powf.cl  powi.cl  slice.cl  sub.cl  sub_assign.cl  sum.cl  transpose.cl  triangular_l.cl  triangular_u.cl  xorshift.cl
src/ops/: abs.rs  add.rs  add_assign.rs  argmax.rs  argmin.rs  argsort.rs  batch_concat.rs  batch_pick.rs  batch_slice.rs  batch_sum.rs  broadcast.rs  common.rs  concat.rs  cos.rs  div.rs  elu.rs  exp.rs  flip.rs  identity.rs  ln.rs  logsumexp.rs  matmul.rs  max.rs  min.rs  mul.rs  mul_assign.rs  neg.rs  permute_dims.rs  pick.rs  powf.rs  powi.rs  prelu.rs  random.rs  reset_tensor.rs  sigmoid.rs  sin.rs  slice.rs  softplus.rs  sqrt.rs  sub.rs  (+8 more)
src/ops/old/: add.rs  add_assign.rs  batch_sum.rs  broadcast.rs  common.rs  div.rs  matmul.rs  mul.rs  mul_assign.rs  random.rs  reset_tensor.rs  sub.rs  sub_assign.rs  sum.rs  tanh.rs  tensor_to_vector.rs
