[package]
name = "prima_undine_opencl"
version = "0.1.0"
authors = ["Koichi Akabe <vbkaisetsu@gmail.com>"]
edition = "2018"
build = "build.rs"

[dev-dependencies]
approx = "0.3"
lazy_static = "1.4.0"

[build-dependencies]
glob = "0.3"

[dependencies]
prima_undine = {path = "../prima-undine/prima_undine"}
ocl-core = "0.11.2"
rand = "0.7"
